Use .valueOf instead of new for number objects